--- a/src/components/counter.module.css
+++ b/src/components/counter.module.css
@@ -45,6 +45,10 @@
     font-size: 24px;
     cursor: pointer;
 }
+.click:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
 .click:hover{
     background-color: #005599;
 }
