--- a/src/components/counter.module.css
+++ b/src/components/counter.module.css
@@ -7,6 +7,9 @@
 }
 
 .counter{
+    margin-right: 20px;
+    width: 250px;
+    height: 150px;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
@@ -45,10 +48,30 @@
     font-size: 24px;
     cursor: pointer;
 }
+
 .click:disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
+
 .click:hover{
     background-color: #005599;
+}
+
+.inputgroup {
+    display: flex;
+    /*//flex-direction: column;*/
+    margin-bottom: 10px;
+}
+
+.inputgroup label {
+    font-size: 14px;
+    margin: 5px 5px;
+}
+
+.inputgroup input {
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    font-size: 16px;
 }
